fix overflow-nav

--- a/src/sass/_contact.scss
+++ b/src/sass/_contact.scss
@@ -1,7 +1,8 @@
 .contactContainer {
   background: $white;
   width: 100vw;
-  min-height: 85vh;
+  min-height: 60vh;
+  height: 85vh;
   display: flex;
   justify-content: space-between;
   align-items: center;
